--- a/sites/all/themes/tmpltzr/style.css
+++ b/sites/all/themes/tmpltzr/style.css
@@ -105,7 +105,7 @@ Equation for font sizing:
 
 #tmpltzr #copy-paste {margin-left:5%; width: 90%; }
 #tmpltzr #gsapp-url { margin-left:5%; width: 90%; font:bold 36px Helvetica, Arial, sans-serif; margin-bottom: 20px;}
-#tmpltzr #page-wrapper-footer { display:block; clear: both; background:#222; color: white; padding:40px 0; width: 100%; margin: 40px 0;}
+#tmpltzr #page-wrapper-footer { display:block; clear: both; background:#222; color: white; padding:40px 0; width: 500px; margin: 40px 0;}
 #tmpltzr #page-wrapper-footer a, #tmpltzr #page-wrapper-footer h4 { color: white; }
 #tmpltzr #page-wrapper-footer h4 { text-decoration: none; }
 #tmpltzr #page-wrapper-footer a:hover { color: #FFFFEE; }
@@ -115,14 +115,24 @@ Equation for font sizing:
 #tmpltzr .tmpltzr-edit {
 	display:block;
 	height:20px;
-	border:1px solid red;
+	width:500px;
+	color:#FF555A;
+	margin:10px 0 15px;
+}
+#tmpltzr .tmpltzr-edit a:hover {
+	background-color:#FF555A;
+	color:white !important;
 }
 #tmpltzr .tmpltzr-edit a {
-	color: red;
+	color: #FF555A !important;
 	font: bold 10px Arial, sans-serif;
 	text-decoration:none;
 	text-align:center;
 	margin:0 auto;
+	border: 1px solid #FF555A;
+	width:100%;
+	display: block;
+	padding: 10px 0;
 }
 
 
