--- a/sites/all/themes/tmpltzr/css/gsapp.css
+++ b/sites/all/themes/tmpltzr/css/gsapp.css
@@ -45,11 +45,6 @@
 /* SUB DIVS */
 
 
-#searchBar {
-	margin:20px 0 50px 30px;
-	display:block;
-}
-
 
 #footer {
     margin-top: 10px;
@@ -60,13 +55,62 @@
 }
 
 
+#gsapplogo{
+	display:block;
+	margin:30px 0 0px 20px;
+}
+
 #login {
-    text-align:right;
+	height: 25px;
+	display: inline-block;
+	margin-left:10px;
+	vertical-align:top;
+	
 }
-#login a {
-    display:inline;
-    text-decoration:underline;
+#login a{
+	color:white;
+	text-decoration:none;
+	font: 11px "courier new", monospace;
 }
+
+/* GOOGLE CUSTOM SEARCH */
+#search-login-container {
+	position:fixed;
+	top:120px;
+	left:20px;
+	width: 360px;
+	height:20px;
+}
+#search {
+	display:inline-block;
+	background-color:white;
+	width:225px;
+	height:24px;
+	-webkit-border-radius: 12px;
+	-moz-border-radius: 12px;
+	border-radius: 12px;
+}
+
+#q{
+	border: none;
+	background-color: transparent;
+	width:180px;
+	padding-left:10px;
+}
+#q:focus {
+	outline:none;
+	outline-offset:none;
+}
+
+#search-button{
+	float: right;
+	padding-right: 10px;
+	padding-top: 4px;
+}
+
+
+
+
 #share {
     margin-top: 2px;
     margin-bottom: 0px;
@@ -1454,237 +1498,11 @@ margin-top:2px;
 	display:none;
 }
 
-#gsapplogo{
-	display:block;
-	margin:20px 0 20px 20px;
-}
 
-
-#search-container {
-	float: left;
-	width: 453px;
-	height: 60px;
-	display: block;
-	margin-top: 5px;
-}
-#logo-container a{
-	text-align: left;
-	display: block;
-}
-#logo-container a:hover{
-	border: none;
-	background: transparent;
-}
-#logo-container a.home{
-	margin-bottom: 12px;
-}
-#login {
-	padding-top: 3px;
-	float: right;
-	height: 25px;
-	display: block;
-	width: 100%;
-	
-}
-#login a{
-	text-align: right;
-}
-
-
-#searchbar {
-	position: relative;
-	z-index: 10000;
-	width: 100%;
-	height: 30px;
-	background-color: transparent;
-	color: white;
-	text-align: center;
-	margin: 0;
-}
 
 
 
   
-
-
-  input.gsc-search-button {
-    border-color: #000000;
-    background-color: #000000;
-    color: white;
-  }
-  .gsc-tabHeader.gsc-tabhInactive {
-    border-color: #777777;
-    background-color: #777777;
-  }
-  .gsc-tabHeader.gsc-tabhActive {
-    border-color: #333333;
-    background-color: #333333;
-  }
-  .gsc-tabsArea {
-    border-color: #333333;
-  }
-  .gsc-webResult.gsc-result,
-  .gsc-results .gsc-imageResult {
-    border-color: #f8f9f9;
-    background-color: #f8f9f9;
-  }
-  .gsc-webResult.gsc-result:hover,
-  .gsc-webResult.gsc-result.gsc-promotion:hover,
-  .gsc-imageResult:hover {
-    border-color: #f8f9f9;
-    background-color: #f8f9f9;
-  }
-  .gsc-control-cse .gs-spelling,
-.gsc-control-cse .gs-result .gs-title,
-.gsc-control-cse .gs-result .gs-title *{
-	text-align: left !important;
-	overflow: hidden;
-	font-size: 14px !important;
-	text-transform: none !important;
-}
-  
-  .gs-webResult.gs-result a.gs-title:link,
-  .gs-webResult.gs-result a.gs-title:link b,
-  .gs-imageResult a.gs-title:link,
-  .gs-imageResult a.gs-title:link b {
-    color: #307bb9;
-  }
-  .gs-webResult.gs-result a.gs-title:visited,
-  .gs-webResult.gs-result a.gs-title:visited b,
-  .gs-imageResult a.gs-title:visited,
-  .gs-imageResult a.gs-title:visited b {
-    color: #307bb9;
-  }
-  .gs-webResult.gs-result a.gs-title:hover,
-  .gs-webResult.gs-result a.gs-title:hover b,
-  .gs-imageResult a.gs-title:hover,
-  .gs-imageResult a.gs-title:hover b {
-    color: #444444;
-    background-color: transparent !important;
-  }
-  .gs-webResult.gs-result a.gs-title:active,
-  .gs-webResult.gs-result a.gs-title:active b,
-  .gs-imageResult a.gs-title:active,
-  .gs-imageResult a.gs-title:active b {
-    color: #cccccc;
-  }
-  .gsc-cursor-page {
-    color: #307bb9;
-  }
-  a.gsc-trailing-more-results:link {
-    color: #307bb9;
-  }
-  .gs-webResult .gs-snippet,
-  .gs-imageResult .gs-snippet,
-  .gs-fileFormatType {
-    color: #777777;
-  }
-  .gs-webResult div.gs-visibleUrl,
-  .gs-imageResult div.gs-visibleUrl {
-    color: #555555;
-  }
-  .gs-webResult div.gs-visibleUrl-short {
-    color: #555555;
-  }
-  .gs-webResult div.gs-visibleUrl-short {
-    display: block;
-  }
-  .gs-webResult div.gs-visibleUrl-long {
-    display: none;
-  }
-  .gs-promotion div.gs-visibleUrl-short {
-    display: none;
-  }
-  .gs-promotion div.gs-visibleUrl-long {
-    display: block;
-  }
-  .gsc-cursor-box {
-    border-color: #f8f9f9;
-    margin-top: 15px !important;
-  }
-  .gsc-results .gsc-cursor-box .gsc-cursor-page {
-    border-color: transparent;
-    background-color: #f8f9f9;
-    color: #307bb9 !important;
-    font-size: 16px;
-    text-decoration: none !important;
-  }
-  .gsc-results .gsc-cursor-box .gsc-cursor-current-page {
-    border-color: #307bb9;
-    background-color: #307bb9;
-    color: #f8f9f9 !important;
-    text-decoration: none !important;
-  }
-  .gsc-webResult.gsc-result.gsc-promotion {
-    border-color: #CCCCCC;
-    background-color: #E6E6E6;
-  }
-  
-  .gsc-webResult .gsc-result {
-	padding:0 !important;
-}
-  .gs-promotion a.gs-title:link,
-  .gs-promotion a.gs-title:link *,
-  .gs-promotion .gs-snippet a:link {
-    color: #0000CC;
-  }
-  .gs-promotion a.gs-title:visited,
-  .gs-promotion a.gs-title:visited *,
-  .gs-promotion .gs-snippet a:visited {
-    color: #0000CC;
-  }
-  .gs-promotion a.gs-title:hover,
-  .gs-promotion a.gs-title:hover *,
-  .gs-promotion .gs-snippet a:hover {
-    color: #444444;
-  }
-  .gs-promotion a.gs-title:active,
-  .gs-promotion a.gs-title:active *,
-  .gs-promotion .gs-snippet a:active {
-    color: #00CC00;
-  }
-  .gs-promotion .gs-snippet,
-  .gs-promotion .gs-title .gs-promotion-title-right,
-  .gs-promotion .gs-title .gs-promotion-title-right *  {
-    color: #333333;
-  }
-  .gs-promotion .gs-visibleUrl,
-  .gs-promotion .gs-visibleUrl-short {
-    color: #00CC00;
-  }
-  .gsc-input input.gsc-input {
-	border-color: #777777;
-    background: none repeat scroll 0% 0% white !important;
-    height: 20px;
-  }
-  
-  .gsc-control-cse{
-	border: 1px solid black !important;
-	padding	: 15px;
-}
-  
-/* google site search */
-form.gsc-search-box {
-	padding: 0 !important;
-	margin: 0 !important;
-}
-
-table.gsc-search-box {
-	margin: 0 !important;
-}
-
-.gsc-control-cse {
-    font-family: Arial, sans-serif;
-    border-color: #333333;
-    background-color: #f8f9f9 !important;
-  }
-
-
-
-
-#cse{
-	width: 100%;
-}
 
 
 tbody {
@@ -1748,3 +1566,5 @@ td.gsc-branding-text, td.gsc-branding-img {
 
 /* MENU */
 #main-menu h2 {display:none;} /* turn this off in Drupal - menu header, blocks config */
+
+
