--- a/sites/all/themes/tmpltzr/css/html-elements.css
+++ b/sites/all/themes/tmpltzr/css/html-elements.css
@@ -9,7 +9,7 @@ body {
 
     padding: 0;
 
-    font: 14px/18px "DIN Next W02 Bold", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font: 16px/20px "DIN Next W02 Bold", "Helvetica Neue", Helvetica, Arial, sans-serif;
 
     color: #051215;
 
@@ -649,7 +649,7 @@ dl dd {
 
 
 #tmpltzr .tmpltzr-body {
-	font: 14px/18px "DIN Next W02 Bold", "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font: 16px/20px "DIN Next W02 Bold", "Helvetica Neue", Helvetica, Arial, sans-serif;
 	padding:0 !important;
 }
 
@@ -773,7 +773,7 @@ dl dd {
 
 
 #tmpltzr .tumblr-post-date {
-	font: 14px/18px "DIN Next W02 Bold", "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font: 16px/20px "DIN Next W02 Bold", "Helvetica Neue", Helvetica, Arial, sans-serif;
 	text-transform:uppercase;
 	margin-bottom: 4px;
 }
@@ -783,7 +783,7 @@ dl dd {
 }
 
 #tmpltzr .embed-tumblr-conversation-speaker {
-	font: 14px/18px "DIN Next W02 Bold", "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font: 16px/20px "DIN Next W02 Bold", "Helvetica Neue", Helvetica, Arial, sans-serif;
 	text-transform:uppercase;
 }
 #tmpltzr .embed-tumblr-conversation-segment {
@@ -1018,7 +1018,7 @@ dl dd {
 #tmpltzr .content #event-output .embedded-event {
 	width: 500px;
 	margin-bottom: 50px;
-	font: 14px/18px "DIN Next W02 Bold", "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font: 16px/20px "DIN Next W02 Bold", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 #tmpltzr .content #event-output .embedded-event a.region, #tmpltzr .content #event-output .embedded-event a.region:hover {
@@ -1127,6 +1127,14 @@ dl dd {
 
 #tmpltzr .view-courseblogs a.term-index-term.unselected  {
 	color:gray !important;
+}
+
+#tmpltzr #main {
+	float:left;
+}
+
+#tmpltzr #right-sidebar {
+	float:right;
 }
 
 /* end custom event widget styles */
