added tmpltzr-module-### class for the setMasonryBrickWidths() function in gsapp.js to figure out .views-row widths for masonry - still doesn't quite work

--- a/sites/all/themes/tmpltzr/css/html-elements.css
+++ b/sites/all/themes/tmpltzr/css/html-elements.css
@@ -478,6 +478,7 @@ dl dd {
 #tmpltzr .views-row {
 	display:block;
 	float:left;
+	
 }
 
 /*
@@ -1130,10 +1131,12 @@ dl dd {
 }
 
 #tmpltzr #main {
+	width:540px;
 	float:left;
 }
 
 #tmpltzr #right-sidebar {
+	width:260px;
 	float:right;
 }
 
