--- a/sites/all/themes/tmpltzr/css/html-elements.css
+++ b/sites/all/themes/tmpltzr/css/html-elements.css
@@ -477,8 +477,21 @@ dl dd {
 
 #tmpltzr .views-row {
 	display:block;
-	float:left;
-	
+	float:left;	
+	margin-bottom:40px;
+}
+
+#tmpltzr .views-row.empty {
+	display:none;
+	margin:0 !important;
+}
+
+#tmpltzr .views-row.width-500 {
+	width:500px;
+}
+
+#tmpltzr .views-row.width-240 {
+	width:240px;
 }
 
 /*
@@ -486,7 +499,7 @@ dl dd {
 */
 
 #tmpltzr .tmpltzr-primary {
-	margin:0 40px 48px 0;
+	/*margin:0 40px 48px 0;*/
 	display:block;
 }
 
@@ -510,7 +523,7 @@ dl dd {
 
 	width:240px;
 
-	margin-right:20px;
+	/* margin-right:20px; tct2003*/
 
 }
 
@@ -752,11 +765,8 @@ dl dd {
 
 
 #tmpltzr .tmpltzr-caption, #tmpltzr .tmpltzr-tags {
-
 	font: 11px/14px "Courier New", Courier, Verdana, sans-serif;
-
-	margin-bottom:10px;
-
+	/*margin-bottom:10px; tct2003*/
 }
 
 
