added course listing as a wrapper for primarycourse that feeds into a pagewrapper based on program and semester as taxonomy terms

--- a/sites/all/themes/tmpltzr/css/html-elements.css
+++ b/sites/all/themes/tmpltzr/css/html-elements.css
@@ -1196,3 +1196,11 @@ dl dd {
 
 /* end custom event widget styles */
 
+
+/* TMPLTZR COURSE */
+#tmpltzr tmpltzr-primarycourse .tmpltzr-course-code, #tmpltzr tmpltzr-primarycourse .tmpltzr-course-instructor {
+	font: 11px/14px "Courier New", Courier, Verdana, sans-serif;
+}
+
+
+
