--- a/sites/all/themes/tmpltzr/css/mobile-specific.css
+++ b/sites/all/themes/tmpltzr/css/mobile-specific.css
@@ -103,10 +103,15 @@
 	padding-bottom:10px;
 }
 
+#mobile-menu ul li.child {
+	display: none;
+}
+
 #mobile-menu ul li a {
 	color: #999;
 	font-size: 28px;
 	text-decoration: none;
+	text-transform: uppercase;
 }
 
 
