changed styling for course listing and fixed setBrickWidth response

--- a/sites/all/themes/tmpltzr/css/html-elements.css
+++ b/sites/all/themes/tmpltzr/css/html-elements.css
@@ -1198,8 +1198,8 @@ dl dd {
 
 
 /* TMPLTZR COURSE */
-#tmpltzr tmpltzr-primarycourse .tmpltzr-course-code, #tmpltzr tmpltzr-primarycourse .tmpltzr-course-instructor {
-	font: 11px/14px "Courier New", Courier, Verdana, sans-serif;
+#tmpltzr .tmpltzr-primarycourse .tmpltzr-course-code, #tmpltzr .tmpltzr-primarycourse .tmpltzr-course-instructor{
+	font: 11px/14px "Courier New", Courier, Verdana, sans-serif !important;
 }
 
 
