course listing styling

--- a/sites/all/themes/tmpltzr/css/html-elements.css
+++ b/sites/all/themes/tmpltzr/css/html-elements.css
@@ -1197,11 +1197,12 @@ dl dd {
 
 
 /* TMPLTZR COURSE */
-#tmpltzr .tmpltzr-primarycourse .tmpltzr-course-code, #tmpltzr .tmpltzr-primarycourse .tmpltzr-course-instructor{
+#tmpltzr .tmpltzr-primarycourse .tmpltzr-course-code, #tmpltzr .tmpltzr-primarycourse, #tmpltzr.tmpltzr-course-points #tmpltzr.tmpltzr-course-instructor{
 	font: 11px/14px "Courier New", Courier, Verdana, sans-serif !important;
 }
 
 
-
-
+#tmpltzr .tmpltzr-course-points{
+	padding: 10px 0 10px 0;
+}
 
